# MnemosyneOS

./: .env  .gitignore  7.sh  AI Information  Dockerfile  Makefile  README.md  alembic.ini  config.py  logging.yaml  main.py  pyproject.toml  requirements.txt
Mnemosyne - main/docs/: README_RECONSTRUCTED.md
Mnemosyne - main/scripts/: firewall.sh  install.sh  setup_container.sh  verify_mnemosyne_tree.py
Res & Dev/: THE FILES.txt  THE FULL IMPLEMENTATION.txt  THE OVER-VIEW PROMPT.txt  THE PRODUCTION PROMPT.txt  THE PROGRESSION FILE.txt
deploy/: env.example  mnemo-beat.service  mnemo-worker.service  mnemosyneos.service
k6/: recall.js
migrations/: env.py
migrations/versions/: 0001_initial.py
mnemosyneos/: .envrc  .gitignore  mnemosyneos_quickstart.sh  pyproject.toml
mnemosyneos/config/: logging.yaml  settings.yaml
mnemosyneos/docs/: MNEMOSYNE_README.md  PLACEMENT_LOG.csv  QUICKSTART.md  README_REPO_REBUILD.md  USAGE_GUIDE.md
mnemosyneos/plugin_spec/: README_PLUGIN.md  openapi.yaml
mnemosyneos/scripts/: backup.sh  bootstrap.sh  exfil_analyze.sh  filer.sh  help_menu.sh  install-mnemo.sh  install.sh  main_menu.sh  memory.sh  menu.sh  monitoring.sh  security_hardening.sh  setup.sh  syntax-check.sh  system_update.sh  uninstall.sh
scripts/: all_files.txt.txt  bench.py  db_setup.sh  install_systemd.sh  load_seed.py  provision_ubuntu.sh  snapshot.py  venv.sh
src/: main.py
src/agents/: A.1.1_base_agent.py
src/api/: deps.py  routes_health.py  routes_memory.py  routes_ops.py  schemas.py
src/core/: compress.py  consistency.py  healing.py  ingest.py  journal.py  recall.py  reflect.py
src/db/: automigrate.py  base.py  models.py  session.py  vector_index.py
src/jobs/: beat_schedule.py  celery_app.py  tasks.py
src/llm/: policy.py  provider.py
src/memory/: M.0.1_persistence.py  M.1.1_l1_ingest.py  M.1.2_l1_flush.py  (+23 more)
tests/: test_concurrent_writers.py  test_contradictions.py  test_crash_commit.py  test_index_corruption.py  test_pii_inputs.py
(+67 files in other folders)
