pyproject.toml
[project]
name = "mnemosyneos"
version = "0.2.0"
description = "Level-5 reflective, self-healing, persistent memory service"
readme = "README.md"
requires-python = ">=3.11"

[project.dependencies]
fastapi = "^0.115.0"
uvicorn = {version="^0.30.0", extras=["standard"]}
gunicorn = "^22.0.0"
sqlalchemy = "^2.0.32"
psycopg = {version="^3.2.1", extras=["binary"]}
pgvector = "^0.3.3"
alembic = "^1.13.2"
redis = "^5.0.7"
celery = "^5.4.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
structlog = "^24.1.0"
orjson = "^3.10.7"
prometheus-client = "^0.20.0"
opentelemetry-sdk = "^1.26.0"
opentelemetry-instrumentation-fastapi = "^0.47b0"
opentelemetry-exporter-otlp = "^1.26.0"
httpx = "^0.27.2"
cryptography = "^43.0.1"
python-dotenv = "^1.0.1"
tenacity = "^9.0.0"
hypothesis = "^6.112.1"
pytest = "^8.3.2"
faker = "^28.0.0"
anyio = "^4.4.0"
tqdm = "^4.66.4"