[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mnemosyneos"
version = "0.1.0"
description = "Self-hosted memory server (MnemosyneOS) — FastAPI + vector store + embeddings."
readme = "README.md"
requires-python = ">=3.10"

# Merge any existing project-specific deps from your requirements.txt into this list.
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "chromadb>=0.5.0",
  "openai>=1.35.0",
  "tenacity>=8.2.3",
  "slowapi>=0.1.9",
  "orjson>=3.10.7"
  # <-- add any remaining lines from your existing requirements.txt here
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
  "black>=24.4.2",
  "types-requests>=2.32.0.20240523"
]

[project.scripts]
mnemo = "main:run"

[tool.hatch.build.targets.wheel]
packages = ["mnemo"]

[tool.hatch.metadata]
allow-direct-references = true